Deprecation: replace new Long(long) with Long.valueOf(long)